@@ -17,6 +17,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import java.io.*;
 import java.nio.file.*;
 import java.util.*;
+import java.util.concurrent.TimeUnit;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -32,22 +33,19 @@ public class DiagramService {
     @Autowired
     private SimpMessagingTemplate messagingTemplate;
 
+    // -------------------- CRUD de Diagram --------------------
+
     @Transactional
     public Diagram createDiagram(DiagramDto diagramDto) {
         Optional<Session> session = sessionRepository.findById(diagramDto.getSessionId());
-        if (session.isPresent()) {
-            // Validación del JSON
-            if (diagramDto.getData() == null || diagramDto.getData().isEmpty()) {
-                throw new IllegalArgumentException("La data no contiene un JSON válido.");
-            }
-
-            Diagram diagram = new Diagram();
-            diagram.setSession(session.get());
-            diagram.setData(diagramDto.getData()); // Se inicializa con el JSON del DTO
-            return diagramRepository.save(diagram);
-        } else {
-            throw new IllegalArgumentException("Sesión no encontrada");
+        if (session.isEmpty()) throw new IllegalArgumentException("Sesión no encontrada");
+        if (diagramDto.getData() == null || diagramDto.getData().isEmpty()) {
+            throw new IllegalArgumentException("La data no contiene un JSON válido.");
         }
+        Diagram diagram = new Diagram();
+        diagram.setSession(session.get());
+        diagram.setData(diagramDto.getData());
+        return diagramRepository.save(diagram);
     }
 
     @Transactional
@@ -56,55 +54,52 @@ public class DiagramService {
                 .orElseThrow(() -> new IllegalArgumentException("Diagrama no encontrado"));
         diagram.setData(newData);
         Diagram updatedDiagram = diagramRepository.save(diagram);
-
-        // Notificar a los usuarios conectados al diagrama
         messagingTemplate.convertAndSend("/topic/diagrams/" + sessionId, newData);
         return updatedDiagram;
     }
 
-    // Obtener diagrama por el ID de sesión
     public Diagram getDiagramBySessionId(Long sessionId) {
         return diagramRepository.findBySessionId(sessionId)
                 .orElseThrow(() -> new IllegalArgumentException("Diagrama no encontrado"));
     }
 
-    // Función principal para exportar el backend
+    // -------------------- Exportación --------------------
+
     public byte[] exportDiagramAsZip(Long sessionId) throws IOException {
         System.out.println("=== INICIANDO EXPORTACIÓN DE DIAGRAMA ===");
         System.out.println("SessionId: " + sessionId);
 
-        // 1. Obtener el diagrama
         Diagram diagram = getDiagramBySessionId(sessionId);
         Map<String, Object> diagramData = diagram.getData();
         System.out.println("Diagrama obtenido: " + (diagramData != null ? "✓" : "✗"));
 
-        // 2. Crear directorio temporal único
-        String tempDirName = "jhipster_generation_" + sessionId + "_" + System.currentTimeMillis();
+        String tempDirName = "jhipster_generation_" + sessionId + "_" + System.nanoTime();
         Path tempDir = Files.createTempDirectory(tempDirName);
         System.out.println("Directorio temporal creado: " + tempDir);
 
         try {
-            // 3. Convertir JSON a JDL
+            // 1) JSON -> JDL
             System.out.println("=== CONVIRTIENDO JSON A JDL ===");
             String jdlContent = convertJsonToJdl(diagramData);
             System.out.println("JDL generado:");
             System.out.println(jdlContent);
-
-            // 4. Crear archivo JDL
             Path jdlFile = tempDir.resolve("model.jdl");
-            Files.write(jdlFile, jdlContent.getBytes());
+            Files.writeString(jdlFile, jdlContent);
             System.out.println("Archivo JDL creado: " + jdlFile);
 
-            // 5. Ejecutar JHipster
+            // 2) Ejecutar JHipster
             System.out.println("=== EJECUTANDO JHIPSTER ===");
-            executeJHipsterGeneration(tempDir, jdlFile);
+            Path projectDir = executeJHipsterGeneration(tempDir, jdlFile);
 
-            // 6. Generar archivos adicionales
+            // 3) Archivos adicionales
             System.out.println("=== GENERANDO ARCHIVOS ADICIONALES ===");
             generatePostmanCollection(tempDir, diagramData);
             generateDataScript(tempDir, diagramData);
 
-            // 7. Comprimir el resultado
+            // 4) Limpiar directorios pesados antes de comprimir
+            deleteHeavyDirs(projectDir);
+
+            // 5) Comprimir (con exclusiones)
             System.out.println("=== COMPRIMIENDO RESULTADO ===");
             byte[] result = compressDirectoryToZip(tempDir);
             System.out.println("ZIP generado: " + result.length + " bytes");
@@ -116,13 +111,26 @@ public class DiagramService {
             e.printStackTrace();
             throw e;
         } finally {
-            // 8. Limpiar archivos temporales
             System.out.println("=== LIMPIANDO ARCHIVOS TEMPORALES ===");
             deleteDirectoryRecursively(tempDir);
         }
     }
 
-    // Función para convertir JSON de GoJS a JDL
+    // -------------------- JSON (GoJS) -> JDL con detección M:N mejorada --------------------
+
+    private static class Attr {
+        String name, type, referencedEntity;
+        boolean primaryKey, foreignKey;
+        int referencedKey; // Para mapear correctamente las FK
+    }
+
+    private static class NodeInfo {
+        String name;
+        int key;
+        List<Attr> attrs = new ArrayList<>();
+        boolean isIntermediate;
+    }
+
     private String convertJsonToJdl(Map<String, Object> diagramData) {
         StringBuilder jdl = new StringBuilder();
         ObjectMapper mapper = new ObjectMapper();
@@ -130,25 +138,86 @@ public class DiagramService {
         try {
             JsonNode rootNode = mapper.convertValue(diagramData, JsonNode.class);
             JsonNode dataNode = rootNode.get("data");
-
-            if (dataNode == null) {
-                throw new IllegalArgumentException("No se encontró el nodo 'data' en el JSON");
-            }
+            if (dataNode == null) throw new IllegalArgumentException("No se encontró el nodo 'data' en el JSON");
 
             JsonNode nodeDataArray = dataNode.get("nodeDataArray");
             JsonNode linkDataArray = dataNode.get("linkDataArray");
 
-            // Extraer nombres de entidades
-            List<String> entityNames = new ArrayList<>();
-            Map<Integer, String> keyToEntityMap = new HashMap<>();
+            // ---- Parsear nodos y atributos
+            Map<Integer, NodeInfo> nodes = new HashMap<>();
+            Map<Integer, String> keyToEntity = new HashMap<>();
+            if (nodeDataArray != null) {
+                for (JsonNode n : nodeDataArray) {
+                    NodeInfo ni = new NodeInfo();
+                    ni.key = n.get("key").asInt();
+                    ni.name = n.get("name").asText();
+                    ni.isIntermediate = n.has("isIntermediateTable") && n.get("isIntermediateTable").asBoolean();
 
-            // Generar configuración de aplicación COMPLETAMENTE ABIERTA
+                    if (n.has("attributes") && n.get("attributes").isArray()) {
+                        for (JsonNode a : n.get("attributes")) {
+                            Attr at = new Attr();
+                            at.name = a.get("name").asText();
+                            at.type = a.get("type").asText();
+                            at.primaryKey = a.has("primaryKey") && a.get("primaryKey").asBoolean();
+                            at.foreignKey = a.has("foreignKey") && a.get("foreignKey").asBoolean();
+                            if (a.has("referencedEntity")) at.referencedEntity = a.get("referencedEntity").asText();
+                            if (a.has("referencedKey")) at.referencedKey = a.get("referencedKey").asInt();
+                            ni.attrs.add(at);
+                        }
+                    }
+
+                    nodes.put(ni.key, ni);
+                    keyToEntity.put(ni.key, ni.name);
+                }
+            }
+
+            // ---- Mejorar detección de tablas intermedias y pure joins
+            Set<String> pureJoinPairs = new HashSet<>();       // genera ManyToMany y NO entidad
+            Set<String> associationEntities = new HashSet<>(); // join con campos extra -> entidad + 2 ManyToOne
+            Map<String, List<String>> intermediateToEntities = new HashMap<>(); // mapeo de tabla intermedia a entidades relacionadas
+
+            for (NodeInfo ni : nodes.values()) {
+                List<Attr> foreignKeys = ni.attrs.stream()
+                        .filter(a -> a.foreignKey && a.referencedEntity != null)
+                        .toList();
+
+                long nonFkNonIdCount = ni.attrs.stream()
+                        .filter(a -> !a.foreignKey && !"id".equalsIgnoreCase(a.name))
+                        .count();
+
+                boolean looksLikeJoin = (foreignKeys.size() == 2);
+
+                if (ni.isIntermediate || looksLikeJoin) {
+                    List<String> referencedEntities = foreignKeys.stream()
+                            .map(a -> a.referencedEntity)
+                            .distinct()
+                            .sorted()
+                            .toList();
+
+                    if (referencedEntities.size() == 2) {
+                        intermediateToEntities.put(ni.name, referencedEntities);
+
+                        // Si tiene campos extra (además de las FKs y el id), es association entity
+                        if (nonFkNonIdCount > 0) {
+                            associationEntities.add(ni.name);
+                            System.out.println("Detectada association entity: " + ni.name + " con campos extra");
+                        } else {
+                            // Pure join: solo las dos FKs (y posiblemente un id autogenerado)
+                            String pairKey = referencedEntities.get(0) + "::" + referencedEntities.get(1);
+                            pureJoinPairs.add(pairKey);
+                            System.out.println("Detectada pure join: " + ni.name + " -> " + pairKey);
+                        }
+                    }
+                }
+            }
+
+            // ---- Cabecera de aplicación
             jdl.append("application {\n");
             jdl.append("  config {\n");
             jdl.append("    baseName generatorApp,\n");
             jdl.append("    applicationType monolith,\n");
             jdl.append("    packageName com.example.generator,\n");
-            jdl.append("    authenticationType jwt,\n");  // Usar JWT pero configurarlo como público
+            jdl.append("    authenticationType jwt,\n");
             jdl.append("    databaseType sql,\n");
             jdl.append("    devDatabaseType postgresql,\n");
             jdl.append("    prodDatabaseType postgresql,\n");
@@ -156,68 +225,131 @@ public class DiagramService {
             jdl.append("    skipUserManagement true\n");
             jdl.append("  }\n");
 
-            // Obtener nombres de entidades
-            if (nodeDataArray != null) {
-                for (JsonNode node : nodeDataArray) {
-                    String entityName = node.get("name").asText();
-                    Integer key = node.get("key").asInt();
-                    entityNames.add(entityName);
-                    keyToEntityMap.put(key, entityName);
+            // Entidades listadas: todas menos pure joins
+            List<String> entityNames = new ArrayList<>();
+            for (NodeInfo ni : nodes.values()) {
+                boolean isPureJoin = isPureJoinNode(ni, pureJoinPairs);
+                if (!isPureJoin) {
+                    entityNames.add(ni.name);
                 }
             }
-
             jdl.append("  entities ").append(String.join(", ", entityNames)).append("\n");
             jdl.append("}\n\n");
 
-            // Generar entidades
-            if (nodeDataArray != null) {
-                for (JsonNode node : nodeDataArray) {
-                    String entityName = node.get("name").asText();
-                    JsonNode attributes = node.get("attributes");
+            // ---- Definición de entidades
+            for (NodeInfo ni : nodes.values()) {
+                if (isPureJoinNode(ni, pureJoinPairs)) {
+                    System.out.println("Saltando pure join entity: " + ni.name);
+                    continue;
+                }
 
-                    jdl.append("entity ").append(entityName).append(" {\n");
+                jdl.append("entity ").append(ni.name).append(" {\n");
 
-                    if (attributes != null) {
-                        for (JsonNode attr : attributes) {
-                            String attrName = attr.get("name").asText();
-                            String attrType = attr.get("type").asText();
-                            boolean isPrimaryKey = attr.get("primaryKey").asBoolean(false);
-                            boolean isForeignKey = attr.get("foreignKey").asBoolean(false);
+                // Para association entities, manejar las FKs de manera especial
+                if (associationEntities.contains(ni.name)) {
+                    // No incluir las FK como campos simples, se manejan como relaciones
+                    for (Attr a : ni.attrs) {
+                        if (a.foreignKey) continue; // Las FKs se manejan como relaciones
+                        if ("id".equalsIgnoreCase(a.name)) continue; // JHipster crea id automático
+                        String jdlType = convertTypeToJDL(a.type);
+                        jdl.append("  ").append(a.name).append(" ").append(jdlType).append("\n");
+                    }
+                } else {
+                    // Entidad normal
+                    for (Attr a : ni.attrs) {
+                        if (a.foreignKey) continue; // Las relaciones se definen después
+                        if ("id".equalsIgnoreCase(a.name)) continue; // JHipster crea id automático
+                        String jdlType = convertTypeToJDL(a.type);
+                        jdl.append("  ").append(a.name).append(" ").append(jdlType).append("\n");
+                    }
+                }
 
-                            // Convertir tipos de GoJS a tipos JDL
-                            String jdlType = convertTypeToJDL(attrType);
+                jdl.append("}\n\n");
+            }
 
-                            // Evitar agregar claves foráneas en la definición de entidad
-                            // JHipster las manejará automáticamente con las relaciones
-                            if (!isForeignKey && !attrName.equals("id")) {
-                                // JHipster maneja automáticamente el ID, no necesita ser declarado
-                                jdl.append("  ").append(attrName).append(" ").append(jdlType).append("\n");
-                            }
+            // ---- Relaciones
+            jdl.append("// Relaciones\n");
+
+            // 1) ManyToMany para pure joins (tablas intermedias sin campos extra)
+            for (String pair : pureJoinPairs) {
+                String[] ends = pair.split("::");
+                jdl.append("relationship ManyToMany {\n");
+                jdl.append("  ").append(ends[0]).append(" to ").append(ends[1]).append("\n");
+                jdl.append("}\n\n");
+            }
+
+            // 2) Association entities -> dos ManyToOne hacia las entidades relacionadas
+            for (String assocEntity : associationEntities) {
+                List<String> relatedEntities = intermediateToEntities.get(assocEntity);
+                if (relatedEntities != null && relatedEntities.size() == 2) {
+                    // Buscar los nombres de los campos FK para usar como nombres de relación
+                    NodeInfo assocNode = nodes.values().stream()
+                            .filter(n -> n.name.equals(assocEntity))
+                            .findFirst()
+                            .orElse(null);
+
+                    if (assocNode != null) {
+                        for (String targetEntity : relatedEntities) {
+                            // Buscar el atributo FK que apunta a esta entidad
+                            String fieldName = assocNode.attrs.stream()
+                                    .filter(a -> a.foreignKey && targetEntity.equals(a.referencedEntity))
+                                    .map(a -> {
+                                        // Convertir idProducto -> producto, idPedido -> pedido
+                                        String name = a.name;
+                                        if (name.toLowerCase().startsWith("id")) {
+                                            name = name.substring(2);
+                                        }
+                                        return name.toLowerCase();
+                                    })
+                                    .findFirst()
+                                    .orElse(targetEntity.toLowerCase());
+
+                            jdl.append("relationship ManyToOne {\n");
+                            jdl.append("  ").append(assocEntity).append("{").append(fieldName).append("} to ").append(targetEntity).append("\n");
+                            jdl.append("}\n\n");
                         }
                     }
-
-                    jdl.append("}\n\n");
                 }
             }
 
-            // Generar relaciones
+            // 3) Otras relaciones del canvas (evitando duplicadas con ManyToMany y association entities)
             if (linkDataArray != null) {
-                jdl.append("// Relaciones\n");
                 for (JsonNode link : linkDataArray) {
-                    String relationship = link.get("relationship").asText();
-                    Integer fromKey = link.get("from").asInt();
-                    Integer toKey = link.get("to").asInt();
-                    String fromMult = link.has("fromMult") ? link.get("fromMult").asText() : "1";
-                    String toMult = link.has("toMult") ? link.get("toMult").asText() : "1";
+                    if (!link.has("from") || !link.has("to")) continue;
+                    int fromKey = link.get("from").asInt();
+                    int toKey = link.get("to").asInt();
+                    String rel = link.has("relationship") ? link.get("relationship").asText() : null;
 
-                    String fromEntity = keyToEntityMap.get(fromKey);
-                    String toEntity = keyToEntityMap.get(toKey);
+                    String fromEntity = keyToEntity.get(fromKey);
+                    String toEntity = keyToEntity.get(toKey);
+                    if (fromEntity == null || toEntity == null) continue;
 
-                    if (fromEntity != null && toEntity != null) {
-                        jdl.append("relationship ").append(relationship).append(" {\n");
-                        jdl.append("  ").append(fromEntity).append(" to ").append(toEntity).append("\n");
-                        jdl.append("}\n\n");
+                    // Saltear si hay marcador isManyToManyPart (indica que es parte de M:N)
+                    if (link.has("isManyToManyPart") && link.get("isManyToManyPart").asBoolean()) {
+                        continue;
                     }
+
+                    // Si alguna entidad es association entity, ya generamos sus relaciones
+                    if (associationEntities.contains(fromEntity) || associationEntities.contains(toEntity)) {
+                        continue;
+                    }
+
+                    // Si este par está cubierto por ManyToMany, skip
+                    if (pureJoinPairs.contains(pairKey(fromEntity, toEntity))) {
+                        continue;
+                    }
+
+                    // Si alguna entidad no existe (fue pure join), skip
+                    if (!entityNames.contains(fromEntity) || !entityNames.contains(toEntity)) {
+                        continue;
+                    }
+
+                    String validRel = convertToValidJDLRelationship(rel);
+                    if (validRel == null) continue;
+
+                    jdl.append("relationship ").append(validRel).append(" {\n");
+                    jdl.append("  ").append(fromEntity).append(" to ").append(toEntity).append("\n");
+                    jdl.append("}\n\n");
                 }
             }
 
@@ -228,16 +360,67 @@ public class DiagramService {
         return jdl.toString();
     }
 
-    // Función para convertir tipos de datos
+    private boolean isPureJoinNode(NodeInfo ni, Set<String> pureJoinPairs) {
+        List<Attr> foreignKeys = ni.attrs.stream()
+                .filter(a -> a.foreignKey && a.referencedEntity != null)
+                .toList();
+
+        long nonFkNonIdCount = ni.attrs.stream()
+                .filter(a -> !a.foreignKey && !"id".equalsIgnoreCase(a.name))
+                .count();
+
+        if (foreignKeys.size() != 2 || nonFkNonIdCount > 0) return false;
+
+        Set<String> referencedEntities = foreignKeys.stream()
+                .map(a -> a.referencedEntity)
+                .collect(TreeSet::new, Set::add, Set::addAll);
+
+        if (referencedEntities.size() != 2) return false;
+
+        String pair = String.join("::", referencedEntities);
+        return pureJoinPairs.contains(pair);
+    }
+
+    private String pairKey(String a, String b) {
+        List<String> ends = new ArrayList<>(Arrays.asList(a, b));
+        Collections.sort(ends);
+        return ends.get(0) + "::" + ends.get(1);
+    }
+
+    private String convertToValidJDLRelationship(String relationship) {
+        if (relationship == null) return null;
+        switch (relationship) {
+            case "OneToOne":
+            case "OneToMany":
+            case "ManyToOne":
+            case "ManyToMany":
+                return relationship;
+            case "Composicion":
+            case "Agregacion":
+                return "OneToMany";
+            case "Generalizacion":
+                return null;
+            case "Dependencia":
+                return "OneToOne";
+            case "Recursividad":
+                return null;
+            default:
+                return "OneToMany";
+        }
+    }
+
     private String convertTypeToJDL(String goJsType) {
+        if (goJsType == null) return "String";
         switch (goJsType.toLowerCase()) {
             case "int":
             case "integer":
                 return "Integer";
             case "text":
             case "string":
+            case "varchar":
                 return "String";
             case "decimal":
+            case "double":
             case "float":
                 return "Double";
             case "boolean":
@@ -247,31 +430,30 @@ public class DiagramService {
             case "datetime":
                 return "Instant";
             default:
-                return "String"; // Tipo por defecto
+                return "String";
         }
     }
 
-    // Función para ejecutar JHipster
-    private void executeJHipsterGeneration(Path workDir, Path jdlFile) throws IOException {
+    // -------------------- JHipster --------------------
+
+    private Path executeJHipsterGeneration(Path workDir, Path jdlFile) throws IOException {
         try {
-            // Crear directorio para el proyecto generado
             Path projectDir = workDir.resolve("generated-project");
             Files.createDirectories(projectDir);
             System.out.println("Directorio del proyecto: " + projectDir);
 
-            // Comando JHipster - actualizado para v8.x
             List<String> command;
             String os = System.getProperty("os.name").toLowerCase();
 
             if (os.contains("windows")) {
                 command = Arrays.asList(
                         "cmd", "/c", "jhipster", "import-jdl", jdlFile.toString(),
-                        "--skip-client", "--skip-user-management", "--force"
+                        "--skip-client", "--skip-user-management", "--force", "--skip-install"
                 );
             } else {
                 command = Arrays.asList(
                         "jhipster", "import-jdl", jdlFile.toString(),
-                        "--skip-client", "--skip-user-management", "--force"
+                        "--skip-client", "--skip-user-management", "--force", "--skip-install"
                 );
             }
 
@@ -280,19 +462,14 @@ public class DiagramService {
 
             ProcessBuilder processBuilder = new ProcessBuilder(command);
             processBuilder.directory(projectDir.toFile());
-
-            // Heredar variables de entorno del sistema (incluye PATH)
+            processBuilder.redirectErrorStream(true);
             Map<String, String> env = processBuilder.environment();
             System.out.println("PATH: " + env.get("PATH"));
 
-            processBuilder.redirectErrorStream(true);
-
             Process process = processBuilder.start();
 
-            // Leer la salida del proceso
             StringBuilder output = new StringBuilder();
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream()))) {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
                     output.append(line).append("\n");
@@ -300,8 +477,7 @@ public class DiagramService {
                 }
             }
 
-            // Esperar a que termine el proceso
-            boolean finished = process.waitFor(10, java.util.concurrent.TimeUnit.MINUTES);
+            boolean finished = process.waitFor(10, TimeUnit.MINUTES);
             if (!finished) {
                 process.destroyForcibly();
                 throw new RuntimeException("JHipster generation timed out after 10 minutes");
@@ -309,17 +485,17 @@ public class DiagramService {
 
             int exitCode = process.exitValue();
             System.out.println("JHipster exit code: " + exitCode);
-
             if (exitCode != 0) {
                 throw new RuntimeException("JHipster generation failed with exit code: " + exitCode +
-                        "\nOutput: " + output.toString());
+                        "\nOutput: " + output);
             }
 
-            // Verificar que se generaron archivos
             try (var stream = Files.walk(projectDir)) {
                 long fileCount = stream.filter(Files::isRegularFile).count();
                 System.out.println("Archivos generados: " + fileCount);
             }
+
+            return projectDir;
 
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
@@ -327,15 +503,27 @@ public class DiagramService {
         }
     }
 
-    // Función para comprimir directorio a ZIP
+    // -------------------- Compresión / Limpieza --------------------
+
     private byte[] compressDirectoryToZip(Path sourceDir) throws IOException {
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        final Set<String> EXCLUDES = new HashSet<>(Arrays.asList(
+                "node_modules", ".git", "target", "build", ".gradle", "dist", ".cache"
+        ));
 
         try (ZipOutputStream zos = new ZipOutputStream(baos)) {
             Files.walk(sourceDir)
                     .filter(path -> !Files.isDirectory(path))
+                    .filter(path -> {
+                        Path rel = sourceDir.relativize(path);
+                        for (Path part : rel) {
+                            if (EXCLUDES.contains(part.toString())) return false;
+                        }
+                        return true;
+                    })
                     .forEach(path -> {
-                        ZipEntry zipEntry = new ZipEntry(sourceDir.relativize(path).toString());
+                        String entryName = sourceDir.relativize(path).toString().replace('\\', '/');
+                        ZipEntry zipEntry = new ZipEntry(entryName);
                         try {
                             zos.putNextEntry(zipEntry);
                             Files.copy(path, zos);
@@ -349,7 +537,39 @@ public class DiagramService {
         return baos.toByteArray();
     }
 
-    // Función para generar colección de Postman
+    private void deleteHeavyDirs(Path projectDir) {
+        List<String> heavy = Arrays.asList("node_modules", ".git", "target", "build", ".gradle", "dist", ".cache");
+        for (String name : heavy) {
+            Path p = projectDir.resolve(name);
+            if (Files.exists(p)) {
+                try {
+                    Files.walk(p)
+                            .sorted(Comparator.reverseOrder())
+                            .map(Path::toFile)
+                            .forEach(File::delete);
+                    System.out.println("Eliminado: " + p);
+                } catch (IOException e) {
+                    System.err.println("No se pudo eliminar " + p + ": " + e.getMessage());
+                }
+            }
+        }
+    }
+
+    private void deleteDirectoryRecursively(Path path) {
+        try {
+            if (Files.exists(path)) {
+                Files.walk(path)
+                        .sorted(Comparator.reverseOrder())
+                        .map(Path::toFile)
+                        .forEach(File::delete);
+            }
+        } catch (IOException e) {
+            System.err.println("Error al eliminar directorio temporal: " + e.getMessage());
+        }
+    }
+
+    // -------------------- Postman / SQL (mejorados para M:N) --------------------
+
     private void generatePostmanCollection(Path workDir, Map<String, Object> diagramData) throws IOException {
         StringBuilder postman = new StringBuilder();
         ObjectMapper mapper = new ObjectMapper();
@@ -360,22 +580,44 @@ public class DiagramService {
             JsonNode nodeDataArray = dataNode.get("nodeDataArray");
             JsonNode linkDataArray = dataNode.get("linkDataArray");
 
-            // Construir mapa de relaciones
             Map<String, String> relationshipMap = new HashMap<>();
             Map<String, String> entityKeys = new HashMap<>();
+            Set<String> associationEntities = new HashSet<>();
 
             if (nodeDataArray != null) {
                 for (JsonNode node : nodeDataArray) {
                     Integer key = node.get("key").asInt();
                     String entityName = node.get("name").asText();
                     entityKeys.put(key.toString(), entityName);
+
+                    // Detectar association entities
+                    boolean isIntermediate = node.has("isIntermediateTable") && node.get("isIntermediateTable").asBoolean();
+                    if (isIntermediate) {
+                        JsonNode attributes = node.get("attributes");
+                        long nonFkCount = 0;
+                        if (attributes != null) {
+                            for (JsonNode attr : attributes) {
+                                boolean isFk = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
+                                String name = attr.get("name").asText();
+                                if (!isFk && !"id".equals(name)) {
+                                    nonFkCount++;
+                                }
+                            }
+                        }
+                        if (nonFkCount > 0) {
+                            associationEntities.add(entityName);
+                        }
+                    }
                 }
             }
 
             if (linkDataArray != null) {
                 for (JsonNode link : linkDataArray) {
-                    String relationship = link.get("relationship").asText();
-                    if ("OneToMany".equals(relationship)) {
+                    String relationship = link.has("relationship") ? link.get("relationship").asText() : null;
+                    boolean isManyToManyPart = link.has("isManyToManyPart") && link.get("isManyToManyPart").asBoolean();
+
+                    if (("OneToMany".equals(relationship) || "Composicion".equals(relationship) || "Agregacion".equals(relationship)) && !isManyToManyPart) {
+                        // Para relaciones OneToMany, Composicion y Agregacion normales, no para partes de ManyToMany
                         Integer fromKey = link.get("from").asInt();
                         Integer toKey = link.get("to").asInt();
                         String parentEntity = entityKeys.get(fromKey.toString());
@@ -385,19 +627,9 @@ public class DiagramService {
                 }
             }
 
-            // Inicio de la colección Postman
             postman.append("{\n");
-            postman.append("  \"info\": {\n");
-            postman.append("    \"name\": \"Generated API Backend\",\n");
-            postman.append("    \"description\": \"API endpoints generados automáticamente - SIN AUTENTICACIÓN\",\n");
-            postman.append("    \"schema\": \"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\"\n");
-            postman.append("  },\n");
-            postman.append("  \"variable\": [\n");
-            postman.append("    {\n");
-            postman.append("      \"key\": \"baseUrl\",\n");
-            postman.append("      \"value\": \"http://localhost:8080\"\n");
-            postman.append("    }\n");
-            postman.append("  ],\n");
+            postman.append("  \"info\": {\"name\": \"Generated API Backend\",\"description\": \"API endpoints generados automáticamente - SIN AUTENTICACIÓN\",\"schema\": \"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\"},\n");
+            postman.append("  \"variable\": [ { \"key\": \"baseUrl\", \"value\": \"http://localhost:8080\" } ],\n");
             postman.append("  \"item\": [\n");
 
             boolean firstEntity = true;
@@ -405,147 +637,98 @@ public class DiagramService {
             if (nodeDataArray != null) {
                 for (JsonNode node : nodeDataArray) {
                     String entityName = node.get("name").asText();
-                    String entityLower = entityName.toLowerCase();
+
+                    // Saltear pure joins (tablas intermedias sin campos extra)
+                    boolean isIntermediate = node.has("isIntermediateTable") && node.get("isIntermediateTable").asBoolean();
+                    if (isIntermediate && !associationEntities.contains(entityName)) {
+                        continue; // Es pure join, no generar endpoints
+                    }
+
+                    String entityLower = convertEntityNameToUrl(entityName);
                     JsonNode attributes = node.get("attributes");
                     String parentEntity = relationshipMap.get(entityName);
 
                     if (!firstEntity) postman.append(",\n");
                     firstEntity = false;
 
-                    // Folder por entidad
-                    postman.append("    {\n");
-                    postman.append("      \"name\": \"").append(entityName).append(" API\",\n");
-                    postman.append("      \"item\": [\n");
+                    postman.append("    {\"name\":\"").append(entityName).append(" API\",\"item\":[\n");
+                    postman.append("      {\"name\":\"Get All ").append(entityName).append("s\",\"request\":{\"method\":\"GET\",\"header\":[],\"url\":\"{{baseUrl}}/api/").append(entityLower).append("s\"}},\n");
+                    postman.append("      {\"name\":\"Get ").append(entityName).append(" by ID\",\"request\":{\"method\":\"GET\",\"header\":[],\"url\":\"{{baseUrl}}/api/").append(entityLower).append("s/1\"}},\n");
 
-                    // GET All
-                    postman.append("        {\n");
-                    postman.append("          \"name\": \"Get All ").append(entityName).append("s\",\n");
-                    postman.append("          \"request\": {\n");
-                    postman.append("            \"method\": \"GET\",\n");
-                    postman.append("            \"header\": [],\n");
-                    postman.append("            \"url\": \"{{baseUrl}}/api/").append(entityLower).append("s\"\n");
-                    postman.append("          }\n");
-                    postman.append("        },\n");
-
-                    // GET By ID
-                    postman.append("        {\n");
-                    postman.append("          \"name\": \"Get ").append(entityName).append(" by ID\",\n");
-                    postman.append("          \"request\": {\n");
-                    postman.append("            \"method\": \"GET\",\n");
-                    postman.append("            \"header\": [],\n");
-                    postman.append("            \"url\": \"{{baseUrl}}/api/").append(entityLower).append("s/1\"\n");
-                    postman.append("          }\n");
-                    postman.append("        },\n");
-
-                    // POST Create con FK correcta
-                    postman.append("        {\n");
-                    postman.append("          \"name\": \"Create ").append(entityName).append("\",\n");
-                    postman.append("          \"request\": {\n");
-                    postman.append("            \"method\": \"POST\",\n");
-                    postman.append("            \"header\": [\n");
-                    postman.append("              {\n");
-                    postman.append("                \"key\": \"Content-Type\",\n");
-                    postman.append("                \"value\": \"application/json\"\n");
-                    postman.append("              }\n");
-                    postman.append("            ],\n");
-                    postman.append("            \"body\": {\n");
-                    postman.append("              \"mode\": \"raw\",\n");
-                    postman.append("              \"raw\": \"{\\n");
-
-                    // Generar body de ejemplo con FK
+                    // POST
+                    postman.append("      {\"name\":\"Create ").append(entityName).append("\",\"request\":{\"method\":\"POST\",\"header\":[{\"key\":\"Content-Type\",\"value\":\"application/json\"}],\"body\":{\"mode\":\"raw\",\"raw\":\"{\\n");
                     boolean firstAttr = true;
                     if (attributes != null) {
                         for (JsonNode attr : attributes) {
                             String attrName = attr.get("name").asText();
                             String attrType = attr.get("type").asText();
-                            boolean isForeignKey = attr.get("foreignKey").asBoolean(false);
+                            boolean isForeignKey = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
 
-                            if (!attrName.equals("id")) {
+                            if (!"id".equals(attrName)) {
                                 if (!firstAttr) postman.append(",\\n");
                                 firstAttr = false;
 
-                                if (isForeignKey && parentEntity != null) {
-                                    // Para FK, usar el formato estándar de JHipster
-                                    String fkName = parentEntity.toLowerCase();
-                                    postman.append("  \\\"").append(fkName).append("\\\": {\\n");
-                                    postman.append("    \\\"id\\\": 1\\n");
-                                    postman.append("  }");
-                                } else {
+                                if (isForeignKey) {
+                                    if (associationEntities.contains(entityName)) {
+                                        // Para association entities, usar el nombre de la relación basado en referencedEntity
+                                        String referencedEntity = attr.has("referencedEntity") ? attr.get("referencedEntity").asText() : "Entity";
+                                        String relationName = convertFkNameToRelationName(attrName, referencedEntity);
+                                        postman.append("  \\\"").append(relationName).append("\\\": {\\n    \\\"id\\\": 1\\n  }");
+                                    } else if (parentEntity != null) {
+                                        // Para relaciones OneToMany normales
+                                        String fkName = parentEntity.toLowerCase();
+                                        postman.append("  \\\"").append(fkName).append("\\\": {\\n    \\\"id\\\": 1\\n  }");
+                                    }
+                                } else if (!isForeignKey) {
                                     String sampleValue = getSampleValue(attrType);
                                     postman.append("  \\\"").append(attrName).append("\\\": ").append(sampleValue);
                                 }
                             }
                         }
                     }
+                    postman.append("\\n}\"},\"url\":\"{{baseUrl}}/api/").append(entityLower).append("s\"}},\n");
 
-                    postman.append("\\n}\"\n");
-                    postman.append("            },\n");
-                    postman.append("            \"url\": \"{{baseUrl}}/api/").append(entityLower).append("s\"\n");
-                    postman.append("          }\n");
-                    postman.append("        },\n");
-
-                    // PUT Update con FK
-                    postman.append("        {\n");
-                    postman.append("          \"name\": \"Update ").append(entityName).append("\",\n");
-                    postman.append("          \"request\": {\n");
-                    postman.append("            \"method\": \"PUT\",\n");
-                    postman.append("            \"header\": [\n");
-                    postman.append("              {\n");
-                    postman.append("                \"key\": \"Content-Type\",\n");
-                    postman.append("                \"value\": \"application/json\"\n");
-                    postman.append("              }\n");
-                    postman.append("            ],\n");
-                    postman.append("            \"body\": {\n");
-                    postman.append("              \"mode\": \"raw\",\n");
-                    postman.append("              \"raw\": \"{\\n  \\\"id\\\": 1");
-
+                    // PUT
+                    postman.append("      {\"name\":\"Update ").append(entityName).append("\",\"request\":{\"method\":\"PUT\",\"header\":[{\"key\":\"Content-Type\",\"value\":\"application/json\"}],\"body\":{\"mode\":\"raw\",\"raw\":\"{\\n  \\\"id\\\": 1");
                     if (attributes != null) {
                         for (JsonNode attr : attributes) {
                             String attrName = attr.get("name").asText();
                             String attrType = attr.get("type").asText();
-                            boolean isForeignKey = attr.get("foreignKey").asBoolean(false);
+                            boolean isForeignKey = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
 
-                            if (!attrName.equals("id")) {
-                                if (isForeignKey && parentEntity != null) {
-                                    String fkName = parentEntity.toLowerCase();
-                                    postman.append(",\\n  \\\"").append(fkName).append("\\\": {\\n");
-                                    postman.append("    \\\"id\\\": 1\\n");
-                                    postman.append("  }");
-                                } else {
+                            if (!"id".equals(attrName)) {
+                                if (isForeignKey) {
+                                    if (associationEntities.contains(entityName)) {
+                                        // Para association entities
+                                        String referencedEntity = attr.has("referencedEntity") ? attr.get("referencedEntity").asText() : "Entity";
+                                        String relationName = convertFkNameToRelationName(attrName, referencedEntity);
+                                        postman.append(",\\n  \\\"").append(relationName).append("\\\": {\\n    \\\"id\\\": 1\\n  }");
+                                    } else if (parentEntity != null) {
+                                        // Para relaciones OneToMany normales
+                                        String fkName = parentEntity.toLowerCase();
+                                        postman.append(",\\n  \\\"").append(fkName).append("\\\": {\\n    \\\"id\\\": 1\\n  }");
+                                    }
+                                } else if (!isForeignKey) {
                                     String sampleValue = getSampleValue(attrType);
                                     postman.append(",\\n  \\\"").append(attrName).append("\\\": ").append(sampleValue);
                                 }
                             }
                         }
                     }
-
-                    postman.append("\\n}\"\n");
-                    postman.append("            },\n");
-                    postman.append("            \"url\": \"{{baseUrl}}/api/").append(entityLower).append("s/1\"\n");
-                    postman.append("          }\n");
-                    postman.append("        },\n");
+                    postman.append("\\n}\"},\"url\":\"{{baseUrl}}/api/").append(entityLower).append("s/1\"}},\n");
 
                     // DELETE
-                    postman.append("        {\n");
-                    postman.append("          \"name\": \"Delete ").append(entityName).append("\",\n");
-                    postman.append("          \"request\": {\n");
-                    postman.append("            \"method\": \"DELETE\",\n");
-                    postman.append("            \"header\": [],\n");
-                    postman.append("            \"url\": \"{{baseUrl}}/api/").append(entityLower).append("s/1\"\n");
-                    postman.append("          }\n");
-                    postman.append("        }\n");
+                    postman.append("      {\"name\":\"Delete ").append(entityName).append("\",\"request\":{\"method\":\"DELETE\",\"header\":[],\"url\":\"{{baseUrl}}/api/").append(entityLower).append("s/1\"}}\n");
 
-                    postman.append("      ]\n");
-                    postman.append("    }");
+                    postman.append("    ]}");
                 }
             }
 
             postman.append("\n  ]\n");
             postman.append("}\n");
 
-            // Escribir archivo
             Path postmanFile = workDir.resolve("API_Postman_Collection.json");
-            Files.write(postmanFile, postman.toString().getBytes());
+            Files.writeString(postmanFile, postman.toString());
             System.out.println("Colección de Postman generada: " + postmanFile);
 
         } catch (Exception e) {
@@ -553,7 +736,6 @@ public class DiagramService {
         }
     }
 
-    // Función para generar script de datos
     private void generateDataScript(Path workDir, Map<String, Object> diagramData) throws IOException {
         StringBuilder sql = new StringBuilder();
         ObjectMapper mapper = new ObjectMapper();
@@ -564,68 +746,95 @@ public class DiagramService {
             JsonNode nodeDataArray = dataNode.get("nodeDataArray");
             JsonNode linkDataArray = dataNode.get("linkDataArray");
 
-            // Construir mapa de relaciones para entender dependencias
             Map<String, String> relationshipMap = new HashMap<>();
             Map<String, String> entityKeys = new HashMap<>();
+            Set<String> associationEntities = new HashSet<>();
+            Set<String> pureJoins = new HashSet<>();
 
-            // Mapear entidades por key
             if (nodeDataArray != null) {
                 for (JsonNode node : nodeDataArray) {
                     Integer key = node.get("key").asInt();
                     String entityName = node.get("name").asText();
                     entityKeys.put(key.toString(), entityName);
+
+                    // Detectar tipos de entidades intermedias
+                    boolean isIntermediate = node.has("isIntermediateTable") && node.get("isIntermediateTable").asBoolean();
+                    if (isIntermediate) {
+                        JsonNode attributes = node.get("attributes");
+                        long nonFkCount = 0;
+                        if (attributes != null) {
+                            for (JsonNode attr : attributes) {
+                                boolean isFk = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
+                                String name = attr.get("name").asText();
+                                if (!isFk && !"id".equals(name)) {
+                                    nonFkCount++;
+                                }
+                            }
+                        }
+                        if (nonFkCount > 0) {
+                            associationEntities.add(entityName);
+                        } else {
+                            pureJoins.add(entityName);
+                        }
+                    }
                 }
             }
 
-            // Mapear relaciones (OneToMany)
             if (linkDataArray != null) {
                 for (JsonNode link : linkDataArray) {
                     String relationship = link.get("relationship").asText();
-                    if ("OneToMany".equals(relationship)) {
+                    boolean isManyToManyPart = link.has("isManyToManyPart") && link.get("isManyToManyPart").asBoolean();
+
+                    if (("OneToMany".equals(relationship) || "Composicion".equals(relationship) || "Agregacion".equals(relationship)) && !isManyToManyPart) {
+                        // Para relaciones OneToMany, Composicion y Agregacion normales, no para partes de ManyToMany
                         Integer fromKey = link.get("from").asInt();
                         Integer toKey = link.get("to").asInt();
                         String parentEntity = entityKeys.get(fromKey.toString());
                         String childEntity = entityKeys.get(toKey.toString());
-                        // El hijo (to) referencia al padre (from)
                         relationshipMap.put(childEntity, parentEntity);
                     }
                 }
             }
 
-            // Encabezado del script
             sql.append("-- Script para poblar la base de datos\n");
             sql.append("-- Generado automáticamente desde el diagrama\n");
-            sql.append("-- IMPORTANTE: Ejecutar después de levantar la aplicación JHipster\n\n");
+            sql.append("-- IMPORTANTE: Ejecutar después de levantar la aplicación JHipster\n");
+            sql.append("-- Las tablas pure join (ManyToMany) se poblan automáticamente a través de la API\n\n");
 
-            // Primero insertar entidades padre (sin FK)
             List<String> processedEntities = new ArrayList<>();
 
             if (nodeDataArray != null) {
-                // 1. Insertar primero las entidades que NO tienen FK (padres)
+                // Procesar primero entidades padre (sin FK)
                 for (JsonNode node : nodeDataArray) {
                     String entityName = node.get("name").asText();
+                    if (pureJoins.contains(entityName)) {
+                        continue; // Saltear pure joins
+                    }
                     if (!relationshipMap.containsKey(entityName)) {
-                        generateEntityData(sql, node, null, relationshipMap);
+                        generateEntityData(sql, node, null, relationshipMap, associationEntities);
                         processedEntities.add(entityName);
                     }
                 }
 
-                // 2. Luego insertar las entidades que SÍ tienen FK (hijos)
+                // Luego entidades hija (con FK)
                 for (JsonNode node : nodeDataArray) {
                     String entityName = node.get("name").asText();
+                    if (pureJoins.contains(entityName)) {
+                        continue; // Saltear pure joins
+                    }
                     if (relationshipMap.containsKey(entityName) && !processedEntities.contains(entityName)) {
-                        generateEntityData(sql, node, relationshipMap.get(entityName), relationshipMap);
+                        generateEntityData(sql, node, relationshipMap.get(entityName), relationshipMap, associationEntities);
                         processedEntities.add(entityName);
                     }
                 }
             }
 
             sql.append("-- Fin del script\n");
-            sql.append("-- Para ejecutar: Copia y pega en tu cliente PostgreSQL\n");
+            sql.append("-- Para relaciones ManyToMany: usar los endpoints de la API REST\n");
+            sql.append("-- Ejemplo: POST /api/productos/1/pedidos con [1,2,3] en el body\n");
 
-            // Escribir archivo
             Path sqlFile = workDir.resolve("sample_data.sql");
-            Files.write(sqlFile, sql.toString().getBytes());
+            Files.writeString(sqlFile, sql.toString());
             System.out.println("Script de datos generado: " + sqlFile);
 
         } catch (Exception e) {
@@ -633,8 +842,8 @@ public class DiagramService {
         }
     }
 
-    // Función auxiliar para generar datos de una entidad
-    private void generateEntityData(StringBuilder sql, JsonNode node, String parentEntity, Map<String, String> relationshipMap) {
+    private void generateEntityData(StringBuilder sql, JsonNode node, String parentEntity,
+                                    Map<String, String> relationshipMap, Set<String> associationEntities) {
         String entityName = node.get("name").asText();
         String tableName = entityName.toLowerCase();
         JsonNode attributes = node.get("attributes");
@@ -643,26 +852,35 @@ public class DiagramService {
         if (parentEntity != null) {
             sql.append(" (referencia a ").append(parentEntity.toLowerCase()).append(")");
         }
+        if (associationEntities.contains(entityName)) {
+            sql.append(" (entidad de asociación Many-to-Many con campos extra)");
+        }
         sql.append("\n");
 
-        // Generar 5 registros de ejemplo por entidad
         for (int i = 1; i <= 5; i++) {
             sql.append("INSERT INTO ").append(tableName).append(" (");
 
-            // Columnas
             boolean firstAttr = true;
             if (attributes != null) {
                 for (JsonNode attr : attributes) {
                     String attrName = attr.get("name").asText();
-                    boolean isForeignKey = attr.get("foreignKey").asBoolean(false);
+                    boolean isForeignKey = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
 
-                    if (!attrName.equals("id")) {
+                    if (!"id".equals(attrName)) {
                         if (!firstAttr) sql.append(", ");
                         firstAttr = false;
 
-                        // Para FK, usar el nombre estándar de JHipster
-                        if (isForeignKey && parentEntity != null) {
-                            sql.append(parentEntity.toLowerCase()).append("_id");
+                        if (isForeignKey) {
+                            // Para association entities, usar el nombre correcto de la columna FK
+                            if (associationEntities.contains(entityName)) {
+                                String referencedEntity = attr.has("referencedEntity") ?
+                                        attr.get("referencedEntity").asText() : "unknown";
+                                sql.append(referencedEntity.toLowerCase()).append("_id");
+                            } else if (parentEntity != null) {
+                                sql.append(parentEntity.toLowerCase()).append("_id");
+                            } else {
+                                sql.append(attrName);
+                            }
                         } else {
                             sql.append(attrName);
                         }
@@ -672,22 +890,21 @@ public class DiagramService {
 
             sql.append(") VALUES (");
 
-            // Valores
             firstAttr = true;
             if (attributes != null) {
                 for (JsonNode attr : attributes) {
                     String attrName = attr.get("name").asText();
                     String attrType = attr.get("type").asText();
-                    boolean isForeignKey = attr.get("foreignKey").asBoolean(false);
+                    boolean isForeignKey = attr.has("foreignKey") && attr.get("foreignKey").asBoolean();
 
-                    if (!attrName.equals("id")) {
+                    if (!"id".equals(attrName)) {
                         if (!firstAttr) sql.append(", ");
                         firstAttr = false;
 
-                        if (isForeignKey && parentEntity != null) {
-                            // FK apunta a un registro del padre (1-5)
-                            int parentId = (i - 1) % 5 + 1; // Distribuir entre 1-5
-                            sql.append(parentId);
+                        if (isForeignKey) {
+                            // Valores de referencia para FKs
+                            int refId = (i - 1) % 5 + 1;
+                            sql.append(refId);
                         } else {
                             sql.append(getSampleSQLValue(attrType, i, attrName));
                         }
@@ -697,12 +914,11 @@ public class DiagramService {
 
             sql.append(");\n");
         }
-
         sql.append("\n");
     }
 
-    // Helper para generar valores de ejemplo en JSON
     private String getSampleValue(String type) {
+        if (type == null) return "\\\"Valor\\\"";
         switch (type.toLowerCase()) {
             case "int":
             case "integer":
@@ -726,8 +942,47 @@ public class DiagramService {
         }
     }
 
-    // Helper para generar valores de ejemplo en SQL
+    // Helper method to convert entity names to URL format (DetallePedido -> detalle-pedidos)
+    private String convertEntityNameToUrl(String entityName) {
+        // Convert camelCase/PascalCase to kebab-case
+        String result = entityName
+                .replaceAll("([a-z])([A-Z])", "$1-$2") // Insert hyphens before uppercase letters
+                .toLowerCase(); // Convert to lowercase
+
+        // Smart pluralization: avoid double 's'
+        if (!result.endsWith("s") && !result.endsWith("o")) {
+            result += "s";
+        } else if (result.endsWith("o")) {
+            result += "s";  // inventario -> inventarios
+        } else if (result.endsWith("s")) {
+            // Already plural or ends with 's', don't add another 's'
+            // inventarios stays inventarios
+        }
+
+        return result;
+    }
+
+    // Helper method to convert FK field names to JPA relation names
+    private String convertFkNameToRelationName(String fkFieldName, String referencedEntity) {
+        // Convert idProducto -> producto, idPedido -> pedido, etc.
+        String relationName = fkFieldName.toLowerCase();
+
+        // Remove 'id' prefix if present
+        if (relationName.startsWith("id")) {
+            relationName = relationName.substring(2);
+        }
+
+        // If after removing 'id' the name matches the referenced entity (case insensitive), use it
+        if (relationName.equalsIgnoreCase(referencedEntity)) {
+            return relationName.toLowerCase();
+        }
+
+        // Otherwise, fall back to the referenced entity name in lowercase
+        return referencedEntity.toLowerCase();
+    }
+
     private String getSampleSQLValue(String type, int index, String fieldName) {
+        if (type == null) return "'" + fieldName + " " + index + "'";
         switch (type.toLowerCase()) {
             case "int":
             case "integer":
@@ -748,20 +1003,6 @@ public class DiagramService {
                 return "'2024-01-" + String.format("%02d", index) + " 10:00:00'";
             default:
                 return "'" + fieldName + " " + index + "'";
-        }
-    }
-
-    // Función para eliminar directorio recursivamente
-    private void deleteDirectoryRecursively(Path path) {
-        try {
-            if (Files.exists(path)) {
-                Files.walk(path)
-                        .sorted(Comparator.reverseOrder())
-                        .map(Path::toFile)
-                        .forEach(File::delete);
-            }
-        } catch (IOException e) {
-            System.err.println("Error al eliminar directorio temporal: " + e.getMessage());
         }
     }
 }
